# DCPYPS

./: .gitignore  .hgignore  .spyderproject  AChdemo.py  AppConverter.py  AppHJCfit.py  AppMain.py  AppQt-HJCFIT.py  AppQt-SCALCS.py  AppRantest.py  AppTrace.py  CH82.html  ClusterInspector.py  ClusterInspectorGUI.py  ConverterQTApp.py  DataInspectorGUI.py  FileConverterGUI.py  INSTALL  MANIFEST.in  Makefile.am  README  README.md  RantestQTApp.py  commit.sh  conf_mac_release.sh  csv2scn.py  dc-unit-test.py  dcdemo.py  dcgui.py  dcrcj.py  dctest.py  demo-GlyR.py  demo-MLL-desens.py  demo-MLL.py  demo-MLLACh.py  demo-dc.py  demo-rcj.py  demo.py  fitdemo.py  guidemo.py  (+26 more)
dcpyps/: .directory  QTconverter.py  QThjcfit.py  QTmain.py  QTrantest.py  QTtrace.py  __init__.py  bisectHJC.py  cjumps.py  cjumpslib.py  converterQT.py  dataset.py  dcequations.py  dcio.py  dcplots.py  dcstatslib.py  filter.py  fitMLL.py  graph.py  io.py  mechanism.py  optimize.py  optimize1.py  pdfs.py  popen.py  qmatgui.py  qmatlib.py  qtcommonlib.py  rantestQT.py  rcj.py  readmecfile.py  reports.py  scalcslib.py  scalcslib1.py  scburst.py  scplotlib.py  scsim.py  simtest.py  tracegui.py  usefulib.py  (+1 more)
dcpyps/dcfits/: __init__.py  dataIO.py  equations.py  expPDF.py  fitting.py  simplex.py  stats.py
dcpyps/ekdist/: EKDIST_example.ipynb  eklib.py  ekplot.py  ekrecord.py  ekscn.py
dcpyps/myqtlibs/: QTconverter.py  QTtrace.py  __init__.py  burstmenu.py  datamenu.py  helpmenu.py  jumpmenu.py  mecfitmenu.py  mechmenu.py  myqtcommon.py  plotwindow.py  savemenu.py  scalcsmenu.py
dcpyps/playground/: BURZORES.txt  N.SCN  __init__.py  hjcfit-bursts.txt  openscan_1.py  runHattonDebug.py  sandbox-macrofitexp.py  sandbox_ini.py  script-fit.py  script-fit52.py  testing_bursts.py
dcpyps/samples/: B.SCN  G.SCN  K.PRT  K.SCN  Kinfo.txt  Kper.txt  Kres.txt  L.SCN  MiloneDes.mec  O.SCN  P.SCN  __init__.py  abc.yaml  demomec.html  samples.py  short.scn  short1.scn  short2.scn  test_1.scn
dcpyps/sccalc/: __init__.py  cjumps.py  popen.py  qmatlib.py  scalcslib.py  scburst.py  scsim.py
dcpyps/test/: __init__.py  test.py
dcpyps/tests/: __init__.py  test_dcfits.py  test_dcfits_simplex.py  test_dcfits_stats.py  test_ekdist_data_loading.py  test_ekdist_functional.py  test_exp_pdf_fit.py  test_sccalc.py
dctest/: test.py
doc/: Makefile  make.bat
doc/source/: bisectHJC.rst  cjumpslib.rst  conf.py  dcio.rst  index.rst  mechanism.rst  pdfs.rst  popen.rst  qmat.rst  qmatlib.rst  rcj.rst  scalcslib.rst  scburst.rst  scplotlib.rst
doc/sphinxext/: numpydoc.py
nbproject/: project.properties  project.xml
nbproject/private/: private.xml
old/: ac_cxx_lib_blitz.m4  acsite.m4  configure.in
old/src/: qmatswig.cxx  qmatswig.cxx.pp  qmatswig.h
playground/: csv2scn.py  demo-GlyR.py  demo-MLLACh.py  graph.py  openscan.py  runHatton.py  script-fit.py  script-fit52.py  simtest.py  test_fit_report.py  testing_bursts.py
playground/old/: __init__.py
report_20140521_100817/: report_20140521_100817.html
report_20140521_100929/: report_20140521_100929.html
report_20140521_102220/: report_20140521_102220.html
report_20140521_102443/: report_20140521_102443.html
report_20140521_102536/: report_20140521_102536.html
report_20140521_102634/: report_20140521_102634.html
report_20140521_102901/: report_20140521_102901.html
report_20140521_102923/: report_20140521_102923.html
report_20140521_103128/: report_20140521_103128.html
report_20140521_103155/: report_20140521_103155.html
report_20140521_103443/: report_20140521_103443.html
report_20140902_100009/: report_20140902_100009.html
scripts/: Example_Exponential_PDF_fit_errors_likelihood_intervals.ipynb  Example_Hill_Equation_fit_errors_likelihood_intervals.ipynb
src/: Makefile.am  QmechRL.mec  calculate_Popen.py  calculate_demo.py  graph.py  mechanism.py  qmat.i  qmat_wrap.cxx  qmatgui.py  qmatlib.py  qmatpy.py  readmecfile.py  scalcslib.py  scplotlib.py
test/: test.py
(+67 files in other folders)
